objects/AsyncRequest__c.object
<CustomObject>
    <description>Models a request to do something asynchronously. Each record has a handler + params. The act of insertion causes the AsyncManager to execute and invoke the handler.  Records can be in an error state allowing for retry</description>
    <fields>
        <fullName>Async_Handler__c</fullName>
        <inlineHelpText>Fully qualified class Name that implements IAsyncRequest for this request</inlineHelpText>
        <label>Async Handler</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Async Handler posts its error into this field. Is_Error__c should also be set to TRUE</description>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if async handler couldn&apos;t successfully process the async request. Can be used to trigger reports and workflows on issues. To retry the async request, clear this flag</description>
        <inlineHelpText>To retry the async request, clear this flag</inlineHelpText>
        <label>Is Error?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Params__c</fullName>
        <description>Typically JSON - represents all the arguments the async handler needs to execute.</description>
        <inlineHelpText>Typically JSON - represents all the arguments the async handler needs to execute.  Could be an array of IDs or something more complex.</inlineHelpText>
        <label>Params</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Async Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AsyncR-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>